# long_play_project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
docs/: COMMODITY_BENCHMARKS_DESIGN.md  DATASET_DICTIONARY.md  DATASET_EXPORT.md  ENERGY_PRICES_DESIGN.md  FEATURE_CATALOG.md  HISTORICAL_PRICE_BARS_DESIGN.md  LEAKAGE_AND_ASOF_AUDIT.md  ML_READY_DATASET_AUDIT.md  NEWS_EVENTS_DESIGN.md  SOURCE_TO_FEATURE_LINEAGE.md  SUPPLY_DEMAND_BASKET_READINESS_AUDIT.md  SUPPLY_DEMAND_COUNTRY_AGGREGATION_DESIGN.md  SUPPLY_DEMAND_COUNTRY_WEIGHT_METHODOLOGY.md  SUPPLY_DEMAND_DESIGN.md  SUPPLY_DEMAND_GLOBAL_BASKET_POLICY.md  TRADE_DATA_DESIGN.md  USDA_PSD_TIER_A_SOURCE_CONTRACT_AUDIT.md  WEATHER_DATA_DESIGN.md
migrations/: env.py
scripts/: audit_chinese_source.py  audit_commodity_benchmarks.py  audit_dataset_readiness.py  audit_energy_sources.py  audit_news_sources.py  audit_supply_demand_basket_readiness.py  audit_supply_demand_sources.py  audit_trade_sources.py  audit_usda_psd_tier_a_source_contract.py  audit_weather_sources.py  backup.py  build_features.py  cleanup_operational.py  codex_project_context.py  discover_price_instruments.py  export_dataset.py  extract_news_events.py  health_report.py  operational_report.py  probe_historical_prices.py  propose_supply_demand_country_weights.py  quality_summary.py  run_collector.py  run_scheduler.py
tests/: test_benchmark_features_schema.py  test_calendar_features_schema.py  test_cbr_fx.py  test_chinese_source_audit.py  test_daily_features.py  (+51 more)
(+122 files in other folders)
