[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commodity-dataset-builder"
version = "0.1.0"
description = "Long-running data engineering system for commodity market datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "APScheduler>=3.10",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

